update from server

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "inzhir-backend",
   "version": "1.0.0",
-  "description": "API for inzhir-cosmo",
+  "description": "API for ingir-cosmo",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "node": "nodemon index.js"
+    "node": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "API"
